fixed star overflow on ultra wide pics

--- a/main.css
+++ b/main.css
@@ -79,6 +79,9 @@ span{
 
 .picsList{
     position: relative;
+    display: flex;
+    align-items: center;
+    min-height: 110px;
 }
 
 .pageButtons{
